feat(org): story 16-4 — auth-user hardening and plant-working-calendar CRUD
Additive V2 migration adds phone_verified_at, force_password_change,
failed_login_attempts, locked_at, lock_reason to auth_users. AuthService.login
enforces 5-failure lockout (resets on success, locks on 5th consecutive fail,
rejects while locked). AuthUserView exposes new fields.

PlantWorkingCalendarService/Controller at /api/v1/plant-working-calendars:
CRUD for calendars and date exceptions, SUPER_ADMIN/MANAGER_MAINTENANCE gate,
PLANT_WORKING_CALENDAR audit. Pilot seed adds GM1 calendar for current year.
Lockout unit tests (4), calendar service tests (3), V1BaseSchemaMigration
extended for V2 assertion, PilotSeedTest green.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>